💄 style: Fix theme incorrect styles

--- a/src/SwashbucklerDiary.Rcl.Hybird/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
+++ b/src/SwashbucklerDiary.Rcl.Hybird/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
@@ -7,7 +7,7 @@
     <MList>
         <MListItem OnClick="()=>showConfig=true">
             <MListItemIcon>
-                <MIcon Class="evident-icon">
+                <MIcon>
                     mdi:mdi-cog-sync-outline
                 </MIcon>
             </MListItemIcon>
@@ -33,7 +33,7 @@
 
         <MListItem OnClick="OpenUploadDialog">
             <MListItemIcon>
-                <MIcon Class="evident-icon">
+                <MIcon>
                     mdi:mdi-cloud-arrow-up-outline
                 </MIcon>
             </MListItemIcon>
@@ -54,7 +54,7 @@
 
         <MListItem OnClick="OpenDownloadDialog">
             <MListItemIcon>
-                <MIcon Class="evident-icon">
+                <MIcon>
                     mdi:mdi-cloud-arrow-down-outline
                 </MIcon>
             </MListItemIcon>
@@ -77,7 +77,7 @@
        Rounded="@("lg")">
     <MListItem>
         <MListItemIcon>
-            <MIcon Class="evident-icon">
+            <MIcon>
                 draft
             </MIcon>
         </MListItemIcon>
