--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
@@ -31,7 +31,7 @@
                             @onclick="HandleOnCancel"
                             Label="@InternalItemText(item)"
                             Value="InternalItemValue(item)"
-                            Color="@MRadioColor">
+                            Color="rgba(var(--m-theme-on-surface))">
                     </MRadio>
                 }
             </MRadioGroup>
