--- a/src/SwashbucklerDiary.Rcl/Components/FloatButton/MyFloatButton.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/FloatButton/MyFloatButton.razor
@@ -1,4 +1,4 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 
 <MButton @ref="mButton"
          @attributes="@Attributes"
