--- a/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCard.razor
@@ -9,7 +9,7 @@
        __internal_preventDefault_oncontextmenu>
     <MListItem>
         <MListItemIcon>
-            <MIcon Class="evident-icon">
+            <MIcon>
                 location_on
             </MIcon>
         </MListItemIcon>
