--- a/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiMenu.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiMenu.razor
@@ -11,7 +11,7 @@
                 @ComputedActivatorContent
             </ActivatorContent>
             <ChildContent>
-                <MCard Class="primary-background rounded-t-lg">
+                <MCard Class="surface rounded-t-lg">
                     <div class="multi-menu-moblie-container">
                         @foreach (var item in DynamicListItems)
                         {
@@ -20,7 +20,7 @@
                                 <div class="menu-item">
                                     <div class="content-container"
                                          @onclick="item.OnClick">
-                                        <MButton Class="second-background mb-2"
+                                        <MButton Class="surface-container mb-2"
                                                  Width="56"
                                                  Height="56"
                                                  Icon="true">
