--- a/src/SwashbucklerDiary.Rcl/Components/SettingSwitch/SettingSwitch.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/SettingSwitch/SettingSwitch.razor
@@ -1,4 +1,4 @@
-﻿@namespace SwashbucklerDiary.Rcl.Components
+@namespace SwashbucklerDiary.Rcl.Components
 
 <MSwitch Value="Value"
          ValueChanged="ValueChanged"
@@ -6,7 +6,7 @@
          OnChange="HandleOnChange"
          Dense="true"
          Inset="true"
-         Color="white">
+         Color="@null">
 </MSwitch>
 
 
