--- a/src/SwashbucklerDiary.Rcl/Components/TextField/TransparentTextField.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/TextField/TransparentTextField.razor
@@ -11,7 +11,7 @@
                   Autofocus="Autofocus"
                   Clearable="Clearable"
                   HideDetails="@("auto")"
-                  Color="@TextFieldColor"
+                  Color="currentColor"
                   spellcheck="false"
                   Placeholder="@(Placeholder ?? I18n.T("Please enter keywords"))">
 </CustomMTextField>
