--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
@@ -7,7 +7,7 @@
                    MiniVariant="true"
                    MiniVariantWidth="76"
                    Touchless="true"
-                   Style="top:initial !important;background:inherit;">
+                   Style="top:initial !important;background:rgba(var(--m-theme-surface));">
     <MList Nav>
         @foreach (var item in Items)
         {
