--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/LocalExportPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/LocalExportPage.razor
@@ -7,7 +7,7 @@
     <MList TwoLine>
         <MListItem OnClick="Export">
             <MListItemIcon>
-                <MIcon Class="evident-icon">
+                <MIcon>
                     mdi:mdi-export
                 </MIcon>
             </MListItemIcon>
@@ -28,7 +28,7 @@
 
         <MListItem OnClick="()=>showImport=true">
             <MListItemIcon>
-                <MIcon Class="evident-icon">
+                <MIcon>
                     mdi:mdi-import
                 </MIcon>
             </MListItemIcon>
