--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -124,7 +124,7 @@
                                 <MListItem @key="item"
                                            OnClick="item.OnClick">
                                     <MListItemIcon>
-                                        <MIcon Class="evident-icon">
+                                        <MIcon>
                                             @(item.Icon)
                                         </MIcon>
                                     </MListItemIcon>
@@ -157,7 +157,7 @@
                                    Rounded="@("lg")">
                                 <MListItem OnClick="item.OnClick">
                                     <MListItemIcon>
-                                        <MIcon Class="evident-icon">
+                                        <MIcon>
                                             @(item.Icon)
                                         </MIcon>
                                     </MListItemIcon>
