--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/CalendarSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/CalendarSetting.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem OnClick="() => showFirstDayOfWeek = true">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         mdi:mdi-calendar-week-begin-outline
                     </MIcon>
                 </MListItemIcon>
