--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         mdi:mdi-emoticon-happy-outline
                     </MIcon>
                 </MListItemIcon>
@@ -31,7 +31,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         label
                     </MIcon>
                 </MListItemIcon>
@@ -49,7 +49,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         location_on
                     </MIcon>
                 </MListItemIcon>
@@ -67,7 +67,7 @@
 
             <MListItem OnClick="@(() => showDiaryCardTimeFormat = true)">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         calendar_clock
                     </MIcon>
                 </MListItemIcon>
