--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         title
                     </MIcon>
                 </MListItemIcon>
@@ -31,7 +31,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         markdown
                     </MIcon>
                 </MListItemIcon>
@@ -49,7 +49,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         info
                     </MIcon>
                 </MListItemIcon>
@@ -71,7 +71,7 @@
         <MList>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         mdi:mdi-alphabetical
                     </MIcon>
                 </MListItemIcon>
@@ -89,7 +89,7 @@
 
             <MListItem OnClick="()=>showEditAutoSave=true">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         save_as
                     </MIcon>
                 </MListItemIcon>
@@ -110,7 +110,7 @@
 
             <MListItem OnClick="@(() => showDiaryTimeFormat = true)">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         calendar_clock
                     </MIcon>
                 </MListItemIcon>
@@ -135,7 +135,7 @@
         <MList>
             <MListItem OnClick="@(()=>To("outlineSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         format_list_bulleted
                     </MIcon>
                 </MListItemIcon>
@@ -151,7 +151,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         format_indent_increase
                     </MIcon>
                 </MListItemIcon>
@@ -169,7 +169,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         format_list_numbered
                     </MIcon>
                 </MListItemIcon>
@@ -187,7 +187,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         mdi:mdi-checkbox-blank-off-outline
                     </MIcon>
                 </MListItemIcon>
@@ -209,7 +209,7 @@
         <MList>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         mdi:mdi-image-refresh-outline
                     </MIcon>
                 </MListItemIcon>
@@ -227,7 +227,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         play_arrow
                     </MIcon>
                 </MListItemIcon>
