--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/OutlineSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/OutlineSetting.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem Class="hidden-sm-and-down">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         format_list_bulleted
                     </MIcon>
                 </MListItemIcon>
@@ -31,7 +31,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         format_align_right
                     </MIcon>
                 </MListItemIcon>
