--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/IndexSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/IndexSetting.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         date_range
                     </MIcon>
                 </MListItemIcon>
@@ -29,7 +29,7 @@
             <MDivider Class="mx-5"></MDivider>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         waving_hand
                     </MIcon>
                 </MListItemIcon>
