--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/PermissionSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/PermissionSettingPage.razor
@@ -12,7 +12,7 @@
         <MList>
             <MListItem OnClick="OpenSystemPermissionSetting">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         photo_camera
                     </MIcon>
                 </MListItemIcon>
@@ -36,7 +36,7 @@
 
             <MListItem OnClick="OpenSystemPermissionSetting">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         sd_card
                     </MIcon>
                 </MListItemIcon>
