--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
@@ -17,7 +17,7 @@
         <MList>
             <MListItem OnClick="@(() => To("permissionSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         manage_accounts
                     </MIcon>
                 </MListItemIcon>
@@ -33,7 +33,7 @@
 
             <MListItem OnClick="@(() => showClearCache = true)">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         mdi:mdi-trash-can-outline
                     </MIcon>
                 </MListItemIcon>
@@ -62,7 +62,7 @@
         <MList>
             <MListItem OnClick="@(() => To("indexSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         home
                     </MIcon>
                 </MListItemIcon>
@@ -76,7 +76,7 @@
             <MDivider Class="mx-5"></MDivider>
             <MListItem OnClick="@(() => To("calendarSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         calendar_month
                     </MIcon>
                 </MListItemIcon>
@@ -96,7 +96,7 @@
         <MList>
             <MListItem OnClick="@(() => To("diarySetting"))">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         book
                     </MIcon>
                 </MListItemIcon>
@@ -110,7 +110,7 @@
             <MDivider Class="mx-5"></MDivider>
             <MListItem OnClick="@(() => To("templateSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         space_dashboard
                     </MIcon>
                 </MListItemIcon>
@@ -124,7 +124,7 @@
             <MDivider Class="mx-5"></MDivider>
             <MListItem OnClick="@(() => To("alertSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         call_to_action
                     </MIcon>
                 </MListItemIcon>
@@ -138,7 +138,7 @@
             <MDivider Class="mx-5"></MDivider>
             <MListItem OnClick="@(() => To("diaryCardSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         mdi:mdi-card-text-outline
                     </MIcon>
                 </MListItemIcon>
@@ -152,7 +152,7 @@
             <MDivider Class="mx-5 hidden-sm-and-down"></MDivider>
             <MListItem Class="hidden-sm-and-down">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         show_chart
                     </MIcon>
                 </MListItemIcon>
@@ -180,7 +180,7 @@
             <MList>
                 <MListItem OnClick="@(() => To("urlScheme"))">
                     <MListItemIcon>
-                        <MIcon Class="evident-icon">
+                        <MIcon>
                             mdi:mdi-link-variant
                         </MIcon>
                     </MListItemIcon>
@@ -196,7 +196,7 @@
 
                 <MListItem>
                     <MListItemIcon>
-                        <MIcon Class="evident-icon">
+                        <MIcon>
                             flash_on
                         </MIcon>
                     </MListItemIcon>
