--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/TemplateSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/TemplateSettingPage.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem OnClick="() => showDefaultTemplate = true">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         space_dashboard
                     </MIcon>
                 </MListItemIcon>
@@ -34,7 +34,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         select
                     </MIcon>
                 </MListItemIcon>
@@ -60,7 +60,7 @@
         <MList>
             <MListItem OnClick="() => showUseTemplateMethod = true">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         tactic
                     </MIcon>
                 </MListItemIcon>
