--- a/src/SwashbucklerDiary.Rcl/Pages/PrivacyModePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/PrivacyModePage.razor
@@ -14,7 +14,7 @@
             <MList>
                 <MListItem>
                     <MListItemIcon>
-                        <MIcon Class="evident-icon">
+                        <MIcon>
                             menu_open
                         </MIcon>
                     </MListItemIcon>
@@ -37,7 +37,7 @@
 
                 <MListItem>
                     <MListItemIcon>
-                        <MIcon Class="evident-icon">
+                        <MIcon>
                             dark_mode
                         </MIcon>
                     </MListItemIcon>
@@ -64,7 +64,7 @@
             <MList>
                 <MListItem>
                     <MListItemIcon>
-                        <MIcon Class="evident-icon">
+                        <MIcon>
                             mdi:mdi-location-enter
                         </MIcon>
                     </MListItemIcon>
@@ -83,7 +83,7 @@
                                  OnClick="SwitchHidePrivacyModeEntrance"
                                  Dense="true"
                                  Inset="true"
-                                 Color="white">
+                                 Color="@null">
                         </MSwitch>
                     </MListItemAction>
                 </MListItem>
@@ -94,7 +94,7 @@
                 {
                     <MListItem OnClick="() => showPrivacyModeFunctionSearchKeyDialog = true">
                         <MListItemIcon>
-                            <MIcon Class="evident-icon">
+                            <MIcon>
                                 keyboard
                             </MIcon>
                         </MListItemIcon>
@@ -120,7 +120,7 @@
                 {
                     <MListItem OnClick="() => showPrivacyModeEntrancePasswordDialog = true">
                         <MListItemIcon>
-                            <MIcon Class="evident-icon">
+                            <MIcon>
                                 key
                             </MIcon>
                         </MListItemIcon>
@@ -147,7 +147,7 @@
                    Rounded="@("lg")">
                 <MListItem OnClick="SwitchPrivacyMode">
                     <MListItemIcon>
-                        <MIcon Class="evident-icon">
+                        <MIcon>
                             swap_horiz
                         </MIcon>
                     </MListItemIcon>
@@ -166,7 +166,7 @@
                Rounded="@("lg")">
             <MListItem OnClick="MoveOldPrivacyDiaries">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         mdi:mdi-file-move-outline
                     </MIcon>
                 </MListItemIcon>
