--- a/src/SwashbucklerDiary.Rcl/Pages/SearchAppFeaturesPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/SearchAppFeaturesPage.razor
@@ -23,7 +23,7 @@
             <MList>
                 <MListItem>
                     <MListItemIcon>
-                        <MIcon Class="evident-icon">
+                        <MIcon>
                             mdi:mdi-hexagon-slice-3
                         </MIcon>
                     </MListItemIcon>
@@ -48,7 +48,7 @@
             <MList>
                 <MListItem>
                     <MListItemIcon>
-                        <MIcon Class="evident-icon">
+                        <MIcon>
                             @item.Icon
                         </MIcon>
                     </MListItemIcon>
