--- a/src/SwashbucklerDiary.Rcl.Hybird/Pages/Export/LANTransfer/LANSenderPage.razor
+++ b/src/SwashbucklerDiary.Rcl.Hybird/Pages/Export/LANTransfer/LANSenderPage.razor
@@ -29,7 +29,7 @@
                                Class="mb-1 rounded"
                                OnClick="item.OnClick">
                         <MListItemIcon>
-                            <MIcon Class="evident-icon">
+                            <MIcon>
                                 @(item.DeviceIcon)
                             </MIcon>
                         </MListItemIcon>
@@ -72,7 +72,7 @@
                 {
                     <MListItem>
                         <MListItemIcon>
-                            <MIcon Class="evident-icon">
+                            <MIcon>
                                 cancel
                             </MIcon>
                         </MListItemIcon>
