--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
@@ -32,7 +32,7 @@
                                   Filled
                                   Rounded
                                   Clearable
-                                  Color="@Color"
+                                  Color="currentColor"
                                   HideDetails="@("auto")"
                                   spellcheck="false"
                                   Placeholder="@(I18n.T("Search"))"
