--- a/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiSearch.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiSearch.razor
@@ -10,7 +10,7 @@
     </MobileContent>
     <DesktopContent>
         <MTextField @bind-Value="searchText"
-                    Class="rounded-pill second-background"
+                    Class="rounded-pill surface-container"
                     Style="max-width:200px;"
                     TValue="string"
                     Solo="true"
