--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
@@ -43,7 +43,7 @@
                         <MListItem @key="item"
                                    OnClick="item.OnClick">
                             <MListItemIcon>
-                                <MIcon Class="evident-icon">
+                                <MIcon>
                                     @(item.Icon)
                                 </MIcon>
                             </MListItemIcon>
