--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
@@ -12,7 +12,7 @@
            Rounded="@("lg")">
         <MListItem OnClick="()=>showTimeout=true">
             <MListItemIcon>
-                <MIcon Class="evident-icon">
+                <MIcon>
                     timer
                 </MIcon>
             </MListItemIcon>
@@ -35,7 +35,7 @@
            Rounded="@("lg")">
         <MListItem>
             <MListItemIcon>
-                <MIcon Class="evident-icon">
+                <MIcon>
                     trophy
                 </MIcon>
             </MListItemIcon>
