--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem OnClick="()=>showEditAvatar=true">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         account_circle
                     </MIcon>
                 </MListItemIcon>
@@ -35,7 +35,7 @@
 
             <MListItem OnClick="()=>showEditUserName=true">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         id_card
                     </MIcon>
                 </MListItemIcon>
@@ -59,7 +59,7 @@
 
             <MListItem OnClick="()=>showEditSign = true">
                 <MListItemIcon>
-                    <MIcon Class="evident-icon">
+                    <MIcon>
                         mdi:mdi-file-sign
                     </MIcon>
                 </MListItemIcon>
