--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -59,7 +59,7 @@
 <ScrollContainer Id="@scrollContainerId"
                  ContentClass="pb-5"
                  ContentStyle="padding-top:0px;">
-    <div id="screenshot" class="primary-background">
+    <div id="screenshot" class="surface">
         <div class="d-flex align-center px-3 flex-wrap">
             @if (diaryTimeFormat?.Contains("yyyy/MM/dd") ?? false)
             {
@@ -156,7 +156,6 @@
                 {
                     <MChip @key="item.Id"
                            IsActive="false"
-                           Outlined="true"
                            Href="@($"tagDetails/{item.Id}")">
                         @(item.Name)
                     </MChip>
